--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,10 @@
         android:layout_marginRight="16dp"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintTop_toBottomOf="@id/totalAmountTitle"
-        android:layout_marginTop="70dp"/>
+        android:layout_marginTop="70dp"
+        android:inputType="number"
+        android:digits="0123456789"
+        android:maxLength="7"/>
 
     <Button
         android:id="@+id/increaseAmountButton"
